--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Jewelry Project</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      text-align: center;
-      padding-top: 80px;
-    }
-  </style>
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0; url=boot%20final%201.html">
 </head>
 <body>
-  <h1>✨ Jewelry Project ✨</h1>
-  <p>Project is live successfully 😎</p>
+  <p>Redirecting to project...</p>
 </body>
 </html>
